# SDL2-game-01

./: .gitignore  01-demo.cpp  CMakeLists.txt  README.md  REDME.txt
src/: game_rand.h  game_structure.cpp  game_structure.h  main.cpp  objects.h  scene_base.h  scene_main.cpp  scene_main.h
